--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ANGULAR_TEST_AF6AC }}'
           channelId: live
           projectId: angular-test-af6ac
+          env:
+            FIREBASE_CLI_EXPERIMENTS: webframeworks
